* 0.8.0 (2019-02-XX)

  * (background) add: bg-topleft, bg-topright, bg-bottomleft, bg-bottomright, bg-repeatx, bg-repeaty, bg-norepeat
  * (background) depreciate: bg-tl, bg-tr, bg-bl, bg-br, bg-rx, bg-ry, bg-nr

* 0.7.4 (2019-02-04)

  * (normalize) fix IE 100vh vertical height

* 0.7.3 (2019-01-03)

  * (borders) fix div color overwrite

* 0.7.2 (2018-10-10)

  * new variables: --serif-font-family, --sansserif-font-family
  * (type) added classes: serif, sansserif
  * (borders) fix: class div to use --border-color as default color

* 0.7.1 (2018-09-19)

  * add changelog
  * (spacing) added classes: px0125, py0125, pt0125, pb0125, pl0125, pr0125, sd-p0, sd-px0, sd-py0, md-p0, md-px0, md-py0, ld-p0, ld-px0, ld-py0
  * removed --div-size, added --border-width to set default border-width and divider size as well